--- a/src/App.css
+++ b/src/App.css
@@ -352,3 +352,10 @@ body {
 .ant-select-single .ant-select-selection-item:hover {
   background-color: transparent !important;
 }
+
+/* Book Activities Button */
+.book-activities-container {
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 20px;
+}
